--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
  <h1> Primer sitio web</h1>
  <p> ¡Hola Mundo! Este es el primer sitio web adaptable y accesible
 desarrollado cumpliendo los estándares HTML5, CSS3. </p>
+<footer>
+    <img scr="images/HTML5.png" alt="HTML5 válido!" />
+    <img scr= "images/CSS3.png” alt= "CSS3 válido!" />
+</footer>
 </body>
 </html>
