--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 desarrollado cumpliendo los estándares HTML5, CSS3. </p>
 <footer>
     <img scr="images/HTML5.png" alt="HTML5 válido!" />
-    <img scr= "images/CSS3.png” alt= "CSS3 válido!" />
+    <img scr= "images/CSS3.png" alt= "CSS3 válido!" />
 </footer>
 </body>
 </html>
