--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
  <p> ¡Hola Mundo! Este es el primer sitio web adaptable y accesible
 desarrollado cumpliendo los estándares HTML5, CSS3. </p>
 <footer>
-    <img scr="images/HTML5.png" alt="HTML5 válido!" />
-    <img scr= "images/CSS3.png" alt= "CSS3 válido!" />
+    <img src="images/HTML5.png" alt="HTML5 válido!" />
+    <img src= "images/CSS3.png" alt= "CSS3 válido!" />
 </footer>
 </body>
 </html>
