--- a/publicaciones.html
+++ b/publicaciones.html
@@ -25,27 +25,27 @@
         <th>Año</th>
         <th>Editor</th>        
     </tr>
-    <tr>
+    <tr lang="en">
         <td>Europe And the Info Age</td>
         <td>1996</td>
         <td>Time Magazine</td>
     </tr>
-    <tr>
+    <tr lang="en">
         <td>Weaving the Web</td>
         <td>1999</td>
         <td>Orion Bussines</td>
     </tr>
-    <tr>
+    <tr lang="en">
         <td>The Semantic Web</td>
         <td>2001</td>
         <td>Scientific American</td>
     </tr>
-    <tr>
+    <tr lang="en">
         <td>A Framework for Web Science</td>
         <td>2006</td>
         <td>Now Publishers</td>
     </tr>
-    <tr>
+    <tr lang="en">
         <td>Linked Data - The Story So Far</td>
         <td>2009</td>
         <td>IJSWIS</td>
