--- a/reconocimientos.html
+++ b/reconocimientos.html
@@ -17,7 +17,7 @@
 <nav>
     <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
     <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-    <a href="formulario.html" accesskey="F" tabindex="3">Formulario</a>
+    <a href="formulario.html" accesskey="O" tabindex="3">Formulario</a>
 </nav>
 <p>En 1990 ya había diseñado los tres protocolos fundamentales para el 
     desarrollo de una Tecnología destinada a mucho más que transformar
