--- a/publicaciones.html
+++ b/publicaciones.html
@@ -14,8 +14,9 @@
 <h1>Publicaciones</h1>
 <nav>
     <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
-    <a href="reconocimientos.html" accesskey="R" tabindex="2">Reconocimientos</a>
-    <a href="formulario.html" accesskey="F" tabindex="3">Formulario</a>
+    <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
+    <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
+    <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
 </nav>
 <p>Berners-Lee ha publicado artículos científicos en las revistas más prestigiosas como <i>Nature</i> o <i>Scientific American</i>. Algunas publicaciones importantes son:</p>
 <table>
@@ -50,12 +51,16 @@
         <td>2009</td>
         <td>IJSWIS</td>
     </tr>
-<!-- ¿Hace falta cambiar el idioma?-->
 </table>
+<figure>
+    <img src="multimedia/libro.jpg" alt="Weaving the Web">
+    <figcaption>Carátula del libro Weaving the Web</figcaption>
+</figure>
+
 <footer>
     <p>Daniel Ferreira Gómez - UO277603</p>
     <p>Universidad de Oviedo - Software y Estándares para la Web</p>
-    <img src="multimedia/uniovi.png" alt="Uniovi" width="100" height="60"/>
+    <img src="multimedia/uniovi.png" alt="Uniovi"/>
 </footer>
 </body>
 </html>
