--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <!-- Datos que describen el documento -->
  <meta charset="UTF-8" />
  <link rel="stylesheet" type="text/css" href="estilo.css"/>
+ 
  <title>Tim John Berners-Lee</title>
  <meta name="author" content="Daniel Ferreira Gómez">
  <meta name="description" content="Biografía de Tim Berners-Lee, padre de lo
@@ -13,12 +14,23 @@
 </head>
  <body> 
  <!-- Datos con el contenido que aparece en el navegador -->
+ <header>
  <h1> Tim John Berners-Lee</h1>
  <nav>
+    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
     <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
     <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-    <a href="formulario.html" accesskey="F" tabindex="3">Formulario</a>
+    <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
 </nav>
+</header>
+<section>
+    <aside>
+        <h2>Elementos relacionados</h2>
+        <ul>
+            
+        </ul>
+    </aside>
+<article>
  <h2>Biografía</h2>
  <p> Timothy "Tim" John Berners-Lee (Londres, Reino Unido, 8 de junio de 1955), conocido como Tim Berners-Lee,
       es un científico de la computación británico, conocido por ser el padre de la World Wide Web. Estableció 
@@ -26,22 +38,38 @@
       En octubre de 1994 fundó el Consorcio de la World Wide Web (W3C) con sede en el MIT, para supervisar y 
       estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet.
      </p>
-     <!-- editar la foto para poner el tamaño que quiera. No hacerlo aquí-->
-     <img src="multimedia/tim.jpg" alt="Tim" width="200" height="200"/> 
+    <figure>
+     <img src="multimedia/tim.jpg" alt="Tim"/> 
+     </figure>
+
+</article>
+
+<article>
  <h2>Desarrollo de su carrera</h2> 
+
  <p>
      Berners-Lee trabajó en el CERN desde junio hasta diciembre de 1980. Durante ese tiempo propuso un proyecto
      basado en el hipertexto para facilitar la forma de compartir y la puesta al día de la información de investigdores. Después de dejar el CERN, en 1980, se fue a trabajar a la empresa de John Poole Image Computer Systems Ltd., pero regresó al CERN otra vez en 1984. Desarrolló su primera propuesta de la Web el 12 de marzo de 1989,8​ pero no tuvo mucho eco, por lo que en 1990 y con la ayuda de Robert Cailliau, hicieron una revisión que fue aceptada por su gerente, Mike Sendall. Usó ideas similares a las que había usado en el sistema Enquire, para crear la World Wide Web, para esto diseñó y construyó el primer navegador (llamado WorldWideWeb y desarrollado con NEXTSTEP) y el primer servidor Web al que llamó httpd (HyperText Transfer Protocol daemon).
  </p>
-
-<img src="multimedia/first_server.jpg" alt="Primer servidor"/>
+<figure>
+    <img src="multimedia/navegador.png"
+         alt="Navegador WorldWideWeb">
+    <figcaption>Navegador WorldWideWeb</figcaption>
+</figure>
 <p>
     El primer servidor Web se encontraba en el CERN y fue puesto en línea el 6 de agosto de 1991. Esto proporcionó una explicación sobre lo que era el World Wide Web, cómo uno podría tener un navegador y cómo establecer un servidor Web. Este fue también el primer directorio Web del mundo, ya que Berners-Lee mantuvo una lista de otros sitios Web aparte del suyo. Debido a que tanto el software del servidor como del cliente fue liberado de forma gratuita desde el CERN, el corazón de Internet Europeo en esa época, su difusión fue muy rápida. El número de servidores Web pasó de veintiséis en 1992 a doscientos en octubre de 1995 lo que refleja cual fue la velocidad de la difusión de internet.
 </p>
+</article>
+</section>
+<section>
+<p> A continuación veremos un vídeo de Berners-Lee mandando un mensaje por los 30 años de la WorldWideWeb</p>
+<video src="multimedia/mensaje.mp4" controls preload="auto"></video>
+</section>
 <footer>
     <p>Daniel Ferreira Gómez - UO277603</p>
     <p>Universidad de Oviedo - Software y Estándares para la Web</p>
-    <img src="multimedia/uniovi.png" alt="Uniovi" width="100" height="60"/>
+    <img src="multimedia/uniovi.png" alt="Uniovi"/>
 </footer>
+<!-- para que quiero utilizar un picture????-->
 </body>
 </html>
