--- a/reconocimientos.html
+++ b/reconocimientos.html
@@ -16,9 +16,12 @@
 </h1>
 <nav>
     <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+    <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
     <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-    <a href="formulario.html" accesskey="O" tabindex="3">Formulario</a>
+    <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
 </nav>
+<section>
+    <h2>Protocolos</h2>
 <p>En 1990 ya había diseñado los tres protocolos fundamentales para el 
     desarrollo de una Tecnología destinada a mucho más que transformar
     la forma en la que nos comunicamos:
@@ -52,8 +55,10 @@
         </ol>
     </li>
 </ol>
-
-<p>Todo eso lo hizo en un ordenador Next, diseñado por Steve Jobs cuando lo obligaron a dejar Apple. Berners-Lee también lleva a su nombre una serie de reconocimientos. Algunos de estos son:</p>
+</section>
+<section>
+    <h2>Reconocimientos</h2>
+<p>Todo eso lo hizo en un ordenador Next, diseñado por Steve Jobs cuando lo obligaron a dejar Apple. Berners-Lee también lleva a su cargo una serie de reconocimientos. Algunos de estos son:</p>
 <ul>
     <li>En 1997 fue hecho oficial de la Orden del Imperio Británico, es miembro de la Royal Society desde 2001 y recibió un premio japonés en 2002</li>
     <li>El 15 de abril de 2004 se convirtió en el primer ganador del Premio de Tecnología del Milenio por la World Wide Web.</li>
@@ -63,11 +68,11 @@
     <li>El 21 de abril de 2009 recibió el grado de doctor honoris causa por la Universidad Politécnica de Madrid (UPM)</li>
     <li>El 4 de abril de 2017 recibió el premio Turing 2016</li>
 </ul>
-<!-- Añadir un diccionario-->
+</section>
 <footer>
     <p>Daniel Ferreira Gómez - UO277603</p>
     <p>Universidad de Oviedo - Software y Estándares para la Web</p>
-    <img src="multimedia/uniovi.png" alt="Uniovi" width="100" height="60"/>
+    <img src="multimedia/uniovi.png" alt="Uniovi"/>
 </footer>
 </body>
 </html>
