--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <!-- Datos que describen el documento -->
  <meta charset="UTF-8" />
  <link rel="stylesheet" type="text/css" href="estilo.css"/>
- <link rel="stylesheet" type="text/css" href="posicionamiento.css"/>
+ <link rel="stylesheet" type="text/css" href="grid.css"/>
  
  <title>Tim John Berners-Lee</title>
  <meta name="author" content="Daniel Ferreira Gómez">
@@ -36,6 +36,7 @@
      </p>
     <figure>
      <img src="multimedia/tim.jpg" alt="Tim"/> 
+     <figcaption>Berners-Lee</figcaption>
      </figure>
 </section>
 
