--- a/opinion.html
+++ b/opinion.html
@@ -4,6 +4,7 @@
  <!-- Datos que describen el documento -->
  <meta charset="UTF-8" />
  <link rel="stylesheet" type="text/css" href="estilo.css"/>
+ <link rel="stylesheet" type="text/css" href="flex.css"/>
  <title>Tim John Berners-Lee - Tu opinión importa</title>
  <meta name="author" content="Daniel Ferreira Gómez">
  <meta name="description" content="Cuestionario para dejar una opinión">
