--- a/index.html
+++ b/index.html
@@ -32,12 +32,9 @@
       es un científico de la computación británico, conocido por ser el padre de la World Wide Web. Estableció 
       la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en diciembre de 1990. 
       En octubre de 1994 fundó el Consorcio de la World Wide Web (W3C) con sede en el MIT, para supervisar y 
-      estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet.
+      estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet. Ante la necesidad de distribuir e intercambiar información acerca de sus investigaciones de una manera más efectiva, Berners-Lee desarrolló las ideas fundamentales que estructuran la web. Él y su grupo crearon lo que por sus siglas en inglés se denomina Lenguaje HTML (HyperText Markup Language) o lenguaje de etiquetas de hipertexto, el protocolo HTTP (HyperText Transfer Protocol) y el sistema de localización de objetos en la web URL (Uniform Resource Locator). Es posible encontrar muchas de las ideas plasmadas por Berners-Lee en el proyecto Xanadú (que propuso Ted Nelson) y el memex (de Vannevar Bush).
      </p>
-    <figure>
-     <img src="multimedia/tim.jpg" alt="Tim"/> 
-     <figcaption>Berners-Lee</figcaption>
-     </figure>
+    
 </section>
 
 
@@ -54,7 +51,7 @@
     <figcaption>Navegador WorldWideWeb</figcaption>
 </figure>
 <p>
-    El primer servidor Web se encontraba en el CERN y fue puesto en línea el 6 de agosto de 1991. Esto proporcionó una explicación sobre lo que era el World Wide Web, cómo uno podría tener un navegador y cómo establecer un servidor Web. Este fue también el primer directorio Web del mundo, ya que Berners-Lee mantuvo una lista de otros sitios Web aparte del suyo. Debido a que tanto el software del servidor como del cliente fue liberado de forma gratuita desde el CERN, el corazón de Internet Europeo en esa época, su difusión fue muy rápida. El número de servidores Web pasó de veintiséis en 1992 a doscientos en octubre de 1995 lo que refleja cual fue la velocidad de la difusión de internet.
+    El primer servidor Web se encontraba en el CERN y fue puesto en línea el 6 de agosto de 1991. Esto proporcionó una explicación sobre lo que era el World Wide Web, cómo uno podría tener un navegador y cómo establecer un servidor Web. Este fue también el primer directorio Web del mundo, ya que Berners-Lee mantuvo una lista de otros sitios Web aparte del suyo. Debido a que tanto el software del servidor como del cliente fue liberado de forma gratuita desde el CERN, el corazón de Internet Europeo en esa época, su difusión fue muy rápida. El número de servidores Web pasó de veintiséis en 1992 a doscientos en octubre de 1995 lo que refleja cual fue la velocidad de la difusión de internet. 
 </p>
     <h2>Vídeo</h2>
 <p> A continuación veremos un vídeo de Berners-Lee mandando un mensaje por los 30 años de la WorldWideWeb</p>
@@ -71,7 +68,19 @@
         <li><a href="https://es.wikipedia.org/wiki/Ted_Nelson">Ted Nelson</a></li>
     </ul>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed repellendus saepe, unde amet aliquid praesentium eaque illum dolorem sint perspiciatis sunt vitae! Optio similique possimus quisquam quos! Aliquid, corrupti ducimus!</p>
+    <article>
+        <h2>Tim Berners-Lee: 'La red no debe tener dueño'</h2>
+        <p>¿Puede un despistado cambiar el curso de la historia? A Tim Berners-Lee la preocupación por encontrar un sustituto de la memoria le llevó a crear un sistema de información al que bautizó con el nombre de World Wide Web (gran telaraña mundial) y que hoy se reconoce como el más vasto y democrático medio de comunicación existente... Seguir leyendo en <a href="https://www.muyinteresante.es/tecnologia/articulo/tim-berners-lee">esta página</a> si está interesado.</p>
+    </article>
+    <section>
+        <h2>Galeria</h2>
+        <img src="multimedia/tim.jpg" alt="Tim Berners-Lee"/> 
+        <img src="multimedia/tim2.jpg" alt="Tim Berners-Lee"/> 
+        <figure>
+            <img src="multimedia/mit.jpg" alt="MIT"/> 
+            <figcaption>Instituto de Tecnología de Massachusets</figcaption>
+        </figure>
+    </section>
 </aside>
 <footer>
     <p>Daniel Ferreira Gómez - UO277603</p>
