--- a/opinion.html
+++ b/opinion.html
@@ -12,13 +12,15 @@
  <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
 </head>
  <body> 
-    <h1> Tim John Berners-Lee</h1>
-<nav>
-    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
-    <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
-    <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-    <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
-</nav>
+    <header>
+        <h1> Tim John Berners-Lee</h1>
+        <nav>
+           <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+           <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
+           <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
+           <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
+       </nav>
+       </header>
 <section>
     <h2>Cuestionario</h2>
 <!--Cambiar y extender el parrafo este-->
@@ -43,7 +45,7 @@
         <input type="radio" name="radio2"> No me da más
         <input type="radio" name="radio2"> No me ha gustado
     </fieldset>
-    <input type="submit" value="Validar" id="boton">
+    <input type="submit" value="Validar">
 </form>
 <p>Como regalo ponemos una charla Ted Talk de Berners-Lee donde habla de un proyecto.</p>
 <audio src="multimedia/tedTalk.mp3" controls></audio>
