--- a/publicaciones.html
+++ b/publicaciones.html
@@ -12,13 +12,15 @@
  <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
 </head>
  <body> 
-    <h1> Tim John Berners-Lee</h1>
-<nav>
-    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
-    <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
-    <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-    <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
-</nav>
+    <header>
+        <h1> Tim John Berners-Lee</h1>
+        <nav>
+           <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+           <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
+           <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
+           <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
+       </nav>
+       </header>
 <section>
     <h2>Publicaciones</h2>
 <p>Berners-Lee ha publicado artículos científicos en las revistas más prestigiosas como <i>Nature</i> o <i>Scientific American</i>. Algunas publicaciones importantes son:</p>
