--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
 </nav>
 </header>
 
-    
-<section id="section1">
+<section>
  <h2>Biografía</h2>
  <p> Timothy "Tim" John Berners-Lee (Londres, Reino Unido, 8 de junio de 1955), conocido como Tim Berners-Lee,
       es un científico de la computación británico, conocido por ser el padre de la World Wide Web. Estableció 
       la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en diciembre de 1990. 
       En octubre de 1994 fundó el Consorcio de la World Wide Web (W3C) con sede en el MIT, para supervisar y 
-      estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet. Ante la necesidad de distribuir e intercambiar información acerca de sus investigaciones de una manera más efectiva, Berners-Lee desarrolló las ideas fundamentales que estructuran la web. Él y su grupo crearon lo que por sus siglas en inglés se denomina Lenguaje HTML (HyperText Markup Language) o lenguaje de etiquetas de hipertexto, el protocolo HTTP (HyperText Transfer Protocol) y el sistema de localización de objetos en la web URL (Uniform Resource Locator). Es posible encontrar muchas de las ideas plasmadas por Berners-Lee en el proyecto Xanadú (que propuso Ted Nelson) y el memex (de Vannevar Bush).
+      estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet. Ante la necesidad de distribuir e intercambiar información acerca de sus investigaciones de una manera más efectiva, Berners-Lee desarrolló las ideas fundamentales que estructuran la web. Él y su grupo crearon lo que por sus siglas en inglés se denomina Lenguaje HTML (HyperText Markup Language) el protocolo HTTP (HyperText Transfer Protocol) y el sistema de localización de objetos en la web URL (Uniform Resource Locator). Es posible encontrar muchas de las ideas plasmadas por Berners-Lee en el proyecto Xanadú (que propuso Ted Nelson) y el memex (de Vannevar Bush).
      </p>
     
 </section>
 
 
-<section id="section2">
+<section>
  <h2>Desarrollo de su carrera</h2> 
 
  <p>
@@ -87,6 +86,5 @@
     <p>Universidad de Oviedo - Software y Estándares para la Web</p>
     <img src="multimedia/uniovi.png" alt="Uniovi"/>
 </footer>
-<!-- para que quiero utilizar un picture????-->
 </body>
 </html>
