--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="es">
 <head>
- <!-- Datos que describen el documento -->
  <meta charset="UTF-8" />
  <link rel="stylesheet" type="text/css" href="estilo.css"/>
  <link rel="stylesheet" type="text/css" href="grid.css"/>
@@ -14,16 +13,15 @@
  <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
 </head>
  <body> 
- <!-- Datos con el contenido que aparece en el navegador -->
  <header>
- <h1> Tim John Berners-Lee</h1>
- <nav>
-    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
-    <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
-    <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-    <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
-</nav>
-</header>
+    <h1> Tim John Berners-Lee</h1>
+    <nav>
+       <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+       <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
+       <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
+       <a href="sumario.html" accesskey="S" tabindex="3">Sumario</a>
+   </nav>
+   </header>
 
 <section>
  <h2>Biografía</h2>
