--- a/publicaciones.html
+++ b/publicaciones.html
@@ -18,7 +18,7 @@
            <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
            <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
            <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-           <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
+           <a href="sumario.html" accesskey="S" tabindex="3">Sumario</a>
        </nav>
        </header>
 <section>
