--- a/reconocimientos.html
+++ b/reconocimientos.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="es">
     <head>
-        <!-- Datos que describen el documento -->
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="estilo.css"/>
         <link rel="stylesheet" type="text/css" href="flex.css"/>
@@ -18,7 +17,7 @@
            <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
            <a href="reconocimientos.html" accesskey="R" tabindex="1">Reconocimientos</a>
            <a href="publicaciones.html" accesskey="P" tabindex="2">Publicaciones</a>
-           <a href="opinion.html" accesskey="T" tabindex="3">Tu opinión importa</a>
+           <a href="sumario.html" accesskey="S" tabindex="3">Sumario</a>
        </nav>
        </header>
 <section>
