--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <figure>
     <img src="multimedia/navegador.png"
          alt="Navegador WorldWideWeb">
-    <figcaption>Navegador WorldWideWeb</figcaption>
+    <figcaption>Primer Navegador</figcaption>
 </figure>
 <p>
     El primer servidor Web se encontraba en el CERN y fue puesto en línea el 6 de agosto de 1991. Esto proporcionó una explicación sobre lo que era el World Wide Web, cómo uno podría tener un navegador y cómo establecer un servidor Web. Este fue también el primer directorio Web del mundo, ya que Berners-Lee mantuvo una lista de otros sitios Web aparte del suyo. Debido a que tanto el software del servidor como del cliente fue liberado de forma gratuita desde el CERN, el corazón de Internet Europeo en esa época, su difusión fue muy rápida. El número de servidores Web pasó de veintiséis en 1992 a doscientos en octubre de 1995 lo que refleja cual fue la velocidad de la difusión de internet. 
@@ -71,8 +71,15 @@
     </article>
     <section>
         <h2>Galeria</h2>
-        <img src="multimedia/tim.jpg" alt="Tim Berners-Lee"/> 
-        <img src="multimedia/tim2.jpg" alt="Tim Berners-Lee"/> 
+        <figure>
+            <img src="multimedia/tim.jpg" alt="Tim Berners-Lee"/> 
+            <figcaption>Foto de Tim Berners-Lee</figcaption>
+        </figure>
+        <figure>
+            <img src="multimedia/cern.jpg" alt="CERN"/> 
+            <figcaption>Organización Europea
+                para la Investigación Nuclea</figcaption>
+        </figure>
         <figure>
             <img src="multimedia/mit.jpg" alt="MIT"/> 
             <figcaption>Instituto de Tecnología de Massachusets</figcaption>
