--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <li><a href="https://es.wikipedia.org/wiki/Ted_Nelson">Ted Nelson</a></li>
     </ul>
 
-    <article>
+    <section>
         <h2>Tim Berners-Lee: 'La red no debe tener dueño'</h2>
-        <p>¿Puede un despistado cambiar el curso de la historia? A Tim Berners-Lee la preocupación por encontrar un sustituto de la memoria le llevó a crear un sistema de información al que bautizó con el nombre de World Wide Web (gran telaraña mundial) y que hoy se reconoce como el más vasto y democrático medio de comunicación existente... Seguir leyendo en <a href="https://www.muyinteresante.es/tecnologia/articulo/tim-berners-lee">esta página</a> si está interesado.</p>
-    </article>
+        <p>¿Puede un despistado cambiar el curso de la historia? A Tim Berners-Lee la preocupación por encontrar un sustituto de la memoria le llevó a crear un sistema de información al que bautizó con el nombre de World Wide Web (gran telaraña mundial) y que hoy se reconoce como el más vasto y democrático medio de comunicación existente... Sigue leyendo en <a href="https://www.muyinteresante.es/tecnologia/articulo/tim-berners-lee">esta página</a> si estás interesado.</p>
+    </section>
     <section>
         <h2>Galeria</h2>
         <figure>
