--- a/sumario.html
+++ b/sumario.html
@@ -5,10 +5,10 @@
  <meta charset="UTF-8" />
  <link rel="stylesheet" type="text/css" href="estilo.css"/>
  <link rel="stylesheet" type="text/css" href="grid.css"/>
- <title>Tim John Berners-Lee - Tu opinión importa</title>
+ <title>Tim John Berners-Lee - Sumario</title>
  <meta name="author" content="Daniel Ferreira Gómez">
- <meta name="description" content="Cuestionario para dejar una opinión">
- <meta name="keywords" content="Tim Berners-Lee, World Wide Web, www, HTTP, Consorcio de la World Wide Web">
+ <meta name="description" content="Resumen del personaje y un pequeño cuestionario">
+ <meta name="keywords" content="Tim Berners-Lee, World Wide Web, www, HTTP, Consorcio de la World Wide Web, Futura Web, Ted Talk Berners Lee">
  <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
 </head>
  <body> 
