--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="es">
 <head>
  <meta charset="UTF-8" />
- <link rel="stylesheet" type="text/css" href="estilo.css"/>
- <link rel="stylesheet" type="text/css" href="grid.css"/>
+ <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+ <link rel="stylesheet" type="text/css" href="css/grid.css"/>
+ <link rel="stylesheet" type="text/css" href="css/gridMedia.css"/>
  
- <title>Tim John Berners-Lee</title>
+ <title>Tim John Berners-Lee - Inicio</title>
  <meta name="author" content="Daniel Ferreira Gómez">
  <meta name="description" content="Biografía de Tim Berners-Lee, padre de lo
  que hoy conocemos por la World Wide Web">
- <meta name="keywords" content="Tim Berners-Lee, World Wide Web, www, HTTP, Consorcio de la World Wide Web">
+ <meta name="keywords" content="Tim Berners-Lee, World Wide Web, www, HTTP, Consorcio de la World Wide Web, HTML, URL, HTTP, MIT, Web, Navegador">
  <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
 </head>
  <body> 
