--- a/publicaciones.html
+++ b/publicaciones.html
@@ -3,8 +3,8 @@
 <head>
  <!-- Datos que describen el documento -->
  <meta charset="UTF-8" />
- <link rel="stylesheet" type="text/css" href="estilo.css"/>
- <link rel="stylesheet" type="text/css" href="flex.css"/>
+ <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+ <link rel="stylesheet" type="text/css" href="css/flex.css"/>
  <title>Tim John Berners-Lee - Publicaciones</title>
  <meta name="author" content="Daniel Ferreira Gómez">
  <meta name="description" content="Publicaciones de gran importancia de Tim Berners-Lee">
