--- a/reconocimientos.html
+++ b/reconocimientos.html
@@ -2,11 +2,11 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" type="text/css" href="estilo.css"/>
-        <link rel="stylesheet" type="text/css" href="flex.css"/>
+        <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+        <link rel="stylesheet" type="text/css" href="css/flex.css"/>
         <title>Tim John Berners-Lee - Reconocimientos</title>
         <meta name="author" content="Daniel Ferreira Gómez">
-        <meta name="description" content=" Reconocimientos de Tim Berners-Lee">
+        <meta name="description" content="Reconocimientos de Tim Berners-Lee">
         <meta name="keywords" content="Tim Berners-Lee, World Wide Web, www, HTTP, Consorcio de la World Wide Web, Publicaciones de Tim Berners-Lee, Reconocimientos de Tim Berners-Lee, URL, URI, HTML">
         <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
        </head>
