--- a/sumario.html
+++ b/sumario.html
@@ -3,11 +3,12 @@
 <head>
  <!-- Datos que describen el documento -->
  <meta charset="UTF-8" />
- <link rel="stylesheet" type="text/css" href="estilo.css"/>
- <link rel="stylesheet" type="text/css" href="grid.css"/>
+ <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+ <link rel="stylesheet" type="text/css" href="css/grid.css"/>
+ <link rel="stylesheet" type="text/css" href="css/gridMedia.css"/>
  <title>Tim John Berners-Lee - Sumario</title>
  <meta name="author" content="Daniel Ferreira Gómez">
- <meta name="description" content="Resumen del personaje y un pequeño cuestionario">
+ <meta name="description" content="Cómo cambió la vida con la WWW y un pequeño cuestionario para dejar una opinión">
  <meta name="keywords" content="Tim Berners-Lee, World Wide Web, www, HTTP, Consorcio de la World Wide Web, Futura Web, Ted Talk Berners Lee">
  <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
 </head>
