--- a/conclusion.html
+++ b/conclusion.html
@@ -42,10 +42,10 @@
     <h2>Cuestionario</h2>
     <p>Puedes dar tu opinión acerca de la web y Berners-Lee rellenando el siguiente cuestionario</p>
 <form name="datos">
-    <label for="nombre">Nombre: </label><br><input id="nombre" type="text"><br>
-    <label for="apellidos">Apellidos: </label><br><input id="apellidos" type="text"><br>
-    <label for="fecha">Fecha de nacimiento: </label><br><input id="fecha" type="date"><br>
-    <label for="email">E-mail: </label><br><input id="email" type="text"><br>
+    <label for="nombre">Nombre: </label><br><input id="nombre" type="text"/><br>
+    <label for="apellidos">Apellidos: </label><br><input id="apellidos" type="text"/><br>
+    <label for="fecha">Fecha de nacimiento: </label><br><input id="fecha" type="date"/><br>
+    <label for="email">E-mail: </label><br><input id="email" type="text"/><br>
     <fieldset>
         <legend>¿Crees que ha revolucionado la comunicación?</legend>
         <input type="radio" name="radio1" checked> Si 
@@ -55,17 +55,17 @@
     <textarea cols="15" rows="6"></textarea>
     <fieldset>
         <legend>¿Qué protocolos conocías?</legend>
-        <input type="checkbox" name="radio2" > HTML
-        <input type="checkbox" name="radio2"> URI
-        <input type="checkbox" name="radio2"> HTTP
+        <input type="checkbox" name="radio2"/> HTML
+        <input type="checkbox" name="radio2"/> URI
+        <input type="checkbox" name="radio2"/> HTTP
     </fieldset>
     <fieldset>
         <legend>¿Qué te ha parecido la web?</legend>
-        <input type="radio" name="radio2" checked> Me ha gustado
-        <input type="radio" name="radio2"> No me da más
-        <input type="radio" name="radio2"> No me ha gustado
+        <input type="radio" name="radio2" checked/> Me ha gustado
+        <input type="radio" name="radio2"/> No me da más
+        <input type="radio" name="radio2"/> No me ha gustado
     </fieldset>
-    <input type="submit" value="Validar">
+    <input type="submit" value="Validar"/>
 </form>
 </aside>
 <footer>
