--- a/conclusion.html
+++ b/conclusion.html
@@ -42,10 +42,10 @@
     <h2>Cuestionario</h2>
     <p>Puedes dar tu opinión acerca de la web y Berners-Lee rellenando el siguiente cuestionario</p>
 <form name="datos">
-    <label for="nombre">Nombre: </label><br><input id="nombre" type="text"/><br>
-    <label for="apellidos">Apellidos: </label><br><input id="apellidos" type="text"/><br>
-    <label for="fecha">Fecha de nacimiento: </label><br><input id="fecha" type="date"/><br>
-    <label for="email">E-mail: </label><br><input id="email" type="text"/><br>
+    <label for="nombre">Nombre: </label><input id="nombre" type="text"/><br>
+    <label for="apellidos">Apellidos: </label><input id="apellidos" type="text"/><br>
+    <label for="fecha">Fecha de nacimiento: </label><input id="fecha" type="date"/><br>
+    <label for="email">E-mail: </label><input id="email" type="text"/><br>
     <fieldset>
         <legend>¿Crees que ha revolucionado la comunicación?</legend>
         <input type="radio" name="radio1" checked> Si 
