--- a/conclusion.html
+++ b/conclusion.html
@@ -51,7 +51,7 @@
         <input type="radio" name="radio1" checked> Si 
         <input type="radio" name="radio1"> No
     </fieldset>
-    <label>¿Por qué?</label><br>
+    <label>¿Por qué?</label>
     <textarea cols="15" rows="6"></textarea>
     <fieldset>
         <legend>¿Qué protocolos conocías?</legend>
