--- a/conclusion.html
+++ b/conclusion.html
@@ -51,8 +51,8 @@
         <input type="radio" name="radio1" checked> Si 
         <input type="radio" name="radio1"> No
     </fieldset>
-    <label>¿Por qué?</label>
-    <textarea cols="15" rows="6"></textarea>
+    <label for="justificacion">¿Por qué?</label>
+    <textarea id="justificacion" cols="15" rows="6"></textarea>
     <fieldset>
         <legend>¿Qué protocolos conocías?</legend>
         <input type="checkbox" name="radio2"/> HTML
