--- a/conclusion.html
+++ b/conclusion.html
@@ -42,30 +42,30 @@
     <h2>Cuestionario</h2>
     <p>Puedes dar tu opinión acerca de la web y Berners-Lee rellenando el siguiente cuestionario</p>
 <form name="datos">
-    <label for="nombre">Nombre: </label><input id="nombre" type="text"/><br>
-    <label for="apellidos">Apellidos: </label><input id="apellidos" type="text"/><br>
-    <label for="fecha">Fecha de nacimiento: </label><input id="fecha" type="date"/><br>
-    <label for="email">E-mail: </label><input id="email" type="text"/><br>
+    <label for="nombre">Nombre: </label><input id="nombre" type="text" name="textfield"/><br>
+    <label for="apellidos">Apellidos: </label><input id="apellidos" type="text" name="textfield"/><br>
+    <label for="fecha">Fecha de nacimiento: </label><input id="fecha" type="date" name="datefield"/><br>
+    <label for="email">E-mail: </label><input id="email" type="text" name="textfield"/><br>
     <fieldset>
         <legend>¿Crees que ha revolucionado la comunicación?</legend>
-        <input type="radio" name="radio1" checked> Si 
-        <input type="radio" name="radio1"> No
+        <input id="si" type="radio" name="radio1" value="si" checked/><label for="si">Si</label><br> 
+        <input id="no" type="radio" name="radio1" value="no"/><label for="no">No</label><br>
     </fieldset>
     <label for="justificacion">¿Por qué?</label>
-    <textarea id="justificacion" cols="15" rows="6"></textarea>
+    <textarea id="justificacion" cols="15" rows="6" name="textoJustificacion"></textarea>
     <fieldset>
         <legend>¿Qué protocolos conocías?</legend>
-        <input type="checkbox" name="radio2"/> HTML
-        <input type="checkbox" name="radio2"/> URI
-        <input type="checkbox" name="radio2"/> HTTP
+        <input id="html" type="checkbox" name="protocolos" value="html"/><label for="html">HTML</label><br>
+        <input id="uri" type="checkbox" name="protocolos" value="uri"/><label for="uri">URI</label><br>
+        <input id="http" type="checkbox" name="protocolos" value="http"/><label for="http">HTTP</label><br>
     </fieldset>
     <fieldset>
         <legend>¿Qué te ha parecido la web?</legend>
-        <input type="radio" name="radio2" checked/> Me ha gustado
-        <input type="radio" name="radio2"/> No me da más
-        <input type="radio" name="radio2"/> No me ha gustado
+        <input id="bien" type="radio" name="radio2" value="me ha gustado" checked/><label for="bien">Me ha gustado</label><br>
+        <input id="regular" type="radio" name="radio2" value="no me da mas" checked/><label for="regular">No me da más</label><br>
+        <input id="mal" type="radio" name="radio2" value="no me ha gustado" checked/><label for="mal">No me ha gustado</label><br>
     </fieldset>
-    <input type="submit" value="Validar"/>
+    <input type="submit" name="submit" value="Validar"/>
 </form>
 </aside>
 <footer>
