--- a/conclusion.html
+++ b/conclusion.html
@@ -42,16 +42,16 @@
     <h2>Cuestionario</h2>
     <p>Puedes dar tu opinión acerca de la web y Berners-Lee rellenando el siguiente cuestionario</p>
 <form name="datos">
-    <label for="nombre">Nombre: </label><input id="nombre" type="text" name="textfield"/><br>
-    <label for="apellidos">Apellidos: </label><input id="apellidos" type="text" name="textfield"/><br>
-    <label for="fecha">Fecha de nacimiento: </label><input id="fecha" type="date" name="datefield"/><br>
-    <label for="email">E-mail: </label><input id="email" type="text" name="textfield"/><br>
+    <label for="nombre">Nombre: </label><br><input id="nombre" type="text" name="textfield"/><br>
+    <label for="apellidos">Apellidos: </label><br><input id="apellidos" type="text" name="textfield"/><br>
+    <label for="fecha">Fecha de nacimiento: </label><br><input id="fecha" type="date" name="datefield"/><br>
+    <label for="email">E-mail: </label><br><input id="email" type="text" name="textfield"/><br>
     <fieldset>
         <legend>¿Crees que ha revolucionado la comunicación?</legend>
         <input id="si" type="radio" name="radio1" value="si" checked/><label for="si">Si</label><br> 
         <input id="no" type="radio" name="radio1" value="no"/><label for="no">No</label><br>
     </fieldset>
-    <label for="justificacion">¿Por qué?</label>
+    <label for="justificacion">¿Por qué?</label><br>
     <textarea id="justificacion" cols="15" rows="6" name="textoJustificacion"></textarea>
     <fieldset>
         <legend>¿Qué protocolos conocías?</legend>
